--- a/index.html
+++ b/index.html
@@ -110,16 +110,7 @@
 </head>
 <body>
 	<div class="background-color">
-    <header>
-        <h1>Yordin Hasty Root Site</h1>
-        <nav>
-            <a href="./">Home</a>
-            ||
-            <a href="./itis3135/index.html">ITIS3135 Site</a>
-            ||
-            <a href="./">About me</a>
-        </nav>
-    </header>
+		<div include-html="./components/header.html"></div>
     <main>
         <h2>Home</h2>
 		<div class="container-text">
@@ -128,36 +119,14 @@
 			<ul>
 				<li><a href="./itis3135/index.html">ITIS3135 Site</a></li>
 				<li><a href="./itis3135/hobby/index.html">Hobby Site</a></li>
+				<li><a href="./whimsical_site/index.html">Whimsical Site</a></li>
 			</ul>
 		</div>
         
     </main>
     <div class="spacer"></div>
 	</div>
-    <footer>
-        <h6 id="copyright">by <a href="yhastydesign.com/">Hasty Designs</a> ©2025, <i>
-            <a href="https://www.freecodecamp.org/certification/yhasty/responsive-web-design"><br>Certified in Responsive Web Design</a>
-            </i>
-        </h6>
-        <nav>
-            <a href="https://webpages.charlotte.edu/yhasty/">UNCC Homepage</a> || 
-            <a href="https://github.com/YordinH">Github Repo</a> || 
-            <a href="https://yordinh.github.io/">Github.io Page</a> || 
-            <a href="https://YordinH.github.io/itis3135/">Github.io ITIS3135 Page</a> || 
-            <a href="https://www.freecodecamp.org/yhasty">FreeCodeCamp Profile</a> || 
-            <a href="https://www.codecademy.com/profiles/yhasty">Codecademy Profile</a> || 
-            <a href="https://www.linkedin.com/in/yordinhasty/">LinkedIn Profile</a>
-        </nav>
-        <div class="checkers">
-        <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
-            <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
-          </a>
-          <a href="https://jigsaw.w3.org/css-validator/check/referer" id="validation_link_css">
-            <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!">
-          </a>
-        
-        </div>
-    </footer>
+	<div include-html="../components/footer.html"></div>
     <script src="./scripts/getDocuments.js"></script>
 </body>
 </html>
