--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -8,16 +8,7 @@
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
-        <h1>Yordin Hasty's YouthfulHedgehog || ITIS 3135</h1>
-        <nav>
-            <a href="./">Home</a>
-            ||
-            <a href="./introduction.html">Introduction</a>
-            ||
-            <a href="./contract.html">Contract</a>
-        </nav>
-    </header>
+    <div include-html="../components/header.html"></div>
     <main>
         <h2>ITIS 3135 Contract</h2>
         <p>Contract
@@ -29,30 +20,7 @@
             code directly. I swear that I will only use these resources to learn, and will not cut and paste code except where I have properly given credit 
             (i.e. external libraries) and never from my classmates. Signed: First M. Last , 02/02/2025</p>
     </main>
-    <footer>
-        <h6 id="copyright">by <a href="yhastydesign.com/">Hasty Designs</a> ©2025, <i>
-            <a href="https://www.freecodecamp.org/certification/yhasty/responsive-web-design"><br>Certified in Responsive Web Design</a>
-            </i>
-        </h6>
-        <nav>
-            <a href="https://webpages.charlotte.edu/yhasty/">UNCC Homepage</a> || 
-            <a href="https://github.com/YordinH">Github Repo</a> || 
-            <a href="https://yordinh.github.io/">Github.io Page</a> || 
-            <a href="https://YordinH.github.io/itis3135/">Github.io ITIS3135 Page</a> || 
-            <a href="https://www.freecodecamp.org/yhasty">FreeCodeCamp Profile</a> || 
-            <a href="https://www.codecademy.com/profiles/yhasty">Codecademy Profile</a> || 
-            <a href="https://www.linkedin.com/in/yordinhasty/">LinkedIn Profile</a>
-        </nav>
-        <div class="checkers">
-        <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
-            <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
-          </a>
-          <a href="https://jigsaw.w3.org/css-validator/check/referer" id="validation_link_css">
-            <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!">
-          </a>
-        
-        </div>
-    </footer>
+    <div include-html="../components/footer.html"></div>
     <script>
         document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
         document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
