--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -307,12 +307,7 @@
         </div>
         
     </main>
-    <footer>
-        <h6 id="copyright">by <a href="yhastydesign.com/">Hasty Designs</a> ©2025, <i>
-            <a href="https://www.freecodecamp.org/certification/yhasty/responsive-web-design"><br>Certified in Responsive Web Design</a>
-            </i>
-        </h6>
-    </footer>
+    <div include-html="../components/footer.html"></div>
     <script>
         document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
         document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
