--- a/itis3135/yhastydesign.com/index.html
+++ b/itis3135/yhastydesign.com/index.html
@@ -7,19 +7,67 @@
     <title>YH Design</title>
     <!--https://coolors.co/ebebeb-e2dedd-dfcfbf-b89080-b2967d-->
     <style>
-        img {
-            max-width:200px;
+        body {
+            background-color: #ebebeb;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            color: #333;
         }
         header {
-            display:flex;
+            display: flex;
+            align-items: center;
             background-color: #dfcfbf;
+            padding: 15px;
+            gap: 15px;
+        }
+        header h1 {
+            color: #b89080;
+            font-size: 2rem;
+        }
+        img {
+            max-width: 150px;
+            height: auto;
+        }
+        main {
+            padding: 20px;
+            background-color: #e2dedd;
+            margin: 20px;
+            border-radius: 10px;
+        }
+        h2 {
+            color: #b89080;
+            font-size: 1.8rem;
+            margin-bottom: 10px;
+        }
+        ul {
+            list-style-type: square;
+            padding-left: 20px;
+            color: #444;
+        }
+        ul li {
+            margin-bottom: 10px;
         }
         .client-info {
-            display:flex;
+            display: flex;
+            gap: 30px;
+            margin-top: 30px;
+            padding: 15px;
+            background-color: #dfcfbf;
+            border-radius: 8px;
         }
-        .contacts {
-            display:flex;
-            flex-direction: column;
+        .contacts h3 {
+            margin-bottom: 10px;
+            color: #b89080;
+        }
+        footer {
+            background-color: #dfcfbf;
+            text-align: center;
+            padding: 15px;
+            margin-top: 40px;
+            font-size: 0.9rem;
+        }
+        footer p {
+            margin: 5px 0;
         }
     </style>
 </head>
@@ -48,17 +96,21 @@
         <div class="client-info">
             <p>What we'll need:</p>
             <div class="contacts">
-                <h3>Contacts</h3>
-                <p>Email: Phone:s</p>
+                <h3>Contact Information</h3>
+                <p>Email:</p>
+                <p>Phone:</p>
+                <p>Address:</p>
             </div>
         </div>
     </main>
     <footer>
-
+        <p><em>“Where Design and Function Combine.”</em></p>
+        <p>&copy;2025 YHDesign</p>
+        <script>
+            document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
+            document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
+        </script>
     </footer>
-    <script>
-        document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
-        document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
-    </script>
+    
 </body>
 </html>
